# AgentRL

./: .gitignore  README.md  TODO.md  proposal_failure_aware_agentrl.tex  proposal_failure_aware_agentrl_refs.bib  pyproject.toml
docs/: environment.md  systems_alignment.md
experiments/configs/: local_suite.json
paper/: main.tex  mlsys2025.sty  refs.bib
paper/tables/: failurebench_summary.csv  failurebench_summary.tex  lifecycle_summary.csv  lifecycle_summary.tex  miniwob_contract_summary.csv  miniwob_contract_summary.tex  model_action_summary.csv  model_action_summary.tex  model_action_throughput_summary.csv  model_action_throughput_summary.tex  model_generation_summary.csv  model_generation_summary.tex  model_provenance_summary.csv  model_provenance_summary.tex  throughput_summary.csv  throughput_summary.tex
scripts/: download_models.py
src/agentrl_infra/: __init__.py  artifacts.py  baselines.py  cli.py  compare.py  events.py  experiments.py  failures.py  metrics.py  orchestrator.py  replay.py  resources.py  runner.py  scheduler.py  session.py  tables.py
src/agentrl_infra/benchmarks/: __init__.py  failurebench.py  lifecycle.py  model_action.py  model_generation.py  model_provenance.py  throughput.py
src/agentrl_infra/integrations/: __init__.py  miniwob.py
tests/: test_artifacts.py  test_baselines.py  test_cli.py  test_compare.py  test_events.py  test_experiments.py  test_failurebench.py  test_failures.py  test_lifecycle.py  test_miniwob.py  test_model_action.py  test_model_provenance.py  test_orchestrator.py  test_replay.py  test_resources.py  test_runner.py  test_scheduler.py  test_session.py  test_tables.py  test_throughput.py
