[project]
name = "agentrl-infra"
version = "0.1.0"
description = "Failure-aware and replayable rollout infrastructure primitives for Agent RL research."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "AgentRL Infra Contributors" }
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]
experiments = [
    "accelerate>=0.33",
    "datasets>=2.20",
    "hf-xet>=1.1",
    "httpx>=0.27",
    "huggingface-hub>=0.34,<1.0",
    "openai>=1.0",
    "protobuf>=5",
    "pyyaml>=6",
    "rich>=13",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "tiktoken>=0.7",
    "transformers>=4.56,<4.57",
]
vllm = [
    "vllm==0.10.2",
]
sglang = [
    "sglang[srt]==0.5.2",
]

[project.scripts]
agentrl-infra = "agentrl_infra.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrl_infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
conflicts = [
  [
    { extra = "vllm" },
    { extra = "sglang" },
  ],
]
